Comment out templating for authorize view

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div id="main"></div>
 
     <script src="js/jquery.js"></script>
-    <script src="js/backbone.js"></script>
     <script src="js/underscore.js"></script>
+    <script src="js/backbone.js"></script>
     <script src="js/bootstrap.js"></script>
 
     <script>
@@ -31,6 +31,7 @@
     <!-- App JS -->
     <script src="app/config.js"></script>
     <script src="app/models/user.js"></script>
+    <script src="app/views/authorize.js"></script>
 
     <script src="app/router.js"></script>
     <script src="app/app.js"></script>
