--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
   <body>
     <div id="main"></div>
 
+    <!-- Template JS -->
+    <script type="text/template" id="authorize-template">
+      <a href="https://public-api.wordpress.com/oauth2/authorize?response_type=code&client_id=<%- app.config.oAuth.clientID %>&redirect_uri=<%- app.config.oAuth.redirectURL %>" class="authorize">Log In with WordPress Connect</a>
+    </script>
+
+    <!-- Library JS -->
     <script src="js/jquery.js"></script>
     <script src="js/underscore.js"></script>
     <script src="js/backbone.js"></script>
     <script src="js/bootstrap.js"></script>
 
+    <!-- App Init -->
     <script>
       window.app = {};
     </script>
@@ -35,13 +42,5 @@
 
     <script src="app/router.js"></script>
     <script src="app/app.js"></script>
-
-    <!-- Template JS -->
-    <script type="text/template" id="authorize-template">
-        <div id="authorize">
-            <a href="https://public-api.wordpress.com/oauth2/authorize?response_type=code&client_id=<%- app.config.oAuth.clientID %>&redirect_uri=<%- app.config.oAuth.redirectURL %>" class="authorize">Log In with WordPress Connect</a>
-        </div>
-    </script>
-
   </body>
 </html>
