--- a/index.html
+++ b/index.html
@@ -19,10 +19,22 @@
   <body>
     <div id="main"></div>
 
+    <div id="filelist">Your browser doesn't have Flash, Silverlight or HTML5 support.</div>
+    <br />
+
+    <div id="container">
+        <a id="pickfiles" href="javascript:;">[Select files]</a>
+        <a id="uploadfiles" href="javascript:;">[Upload files]</a>
+    </div>
+
+    <br />
+    <pre id="console"></pre>
+
     <script src="js/jquery.js"></script>
     <script src="js/underscore.js"></script>
     <script src="js/backbone.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/plupload.full.min.js"></script>
 
     <script>
       window.app = {};
@@ -35,6 +47,7 @@
 
     <script src="app/router.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/uploader.js"></script>
 
     <!-- Template JS -->
     <script type="text/template" id="authorize-template">
