add drag/drop support for the uploader
includes styles for an overlay for the drag event

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <link href="css/app.css" rel="stylesheet">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -16,7 +18,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body id="the-body">
     <div id="main"></div>
 
     <div id="filelist">Your browser doesn't have Flash, Silverlight or HTML5 support.</div>
@@ -28,7 +30,6 @@
     </div>
 
     <br />
-    <pre id="console"></pre>
 
     <!-- Template JS -->
     <script type="text/template" id="authorize-template">
