...now with refresh after upload

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </script>
 
     <div id='filegrid-title'>Loading your media library...</div>
-    <div id='filegrid' />
+    <div id='filegrid'></div>
 
     <!-- Library JS -->
     <script src="js/jquery.js"></script>
