--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <link href="css/app.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -34,6 +33,10 @@
     <!-- Template JS -->
     <script type="text/template" id="hello-template">
         <h1>Hello, <%- display_name %>!</h1>
+    </script>
+
+    <script type="text/template" id="logout-template">
+        <a href="#logout" id="logout">Log Out</a>
     </script>
 
     <script type="text/template" id="authorize-template">
