add support for pushstate
* add an htaccess file
* load files from the root
* modify the router
* use router navigation instead of location hacks

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Sulfur</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/app.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/app.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,7 +36,7 @@
     </script>
 
     <script type="text/template" id="logout-template">
-        <a href="#logout" id="logout">Log Out</a>
+        <a href="/logout" id="logout">Log Out</a>
     </script>
 
     <script type="text/template" id="authorize-template">
@@ -47,11 +47,11 @@
     <div id='filegrid'></div>
 
     <!-- Library JS -->
-    <script src="js/jquery.js"></script>
-    <script src="js/underscore.js"></script>
-    <script src="js/backbone.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/plupload.full.min.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/underscore.js"></script>
+    <script src="/js/backbone.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/plupload.full.min.js"></script>
 
     <!-- App Init -->
     <script>
@@ -59,12 +59,12 @@
     </script>
 
     <!-- App JS -->
-    <script src="app/views/authorization.js"></script>
+    <script src="/app/views/authorization.js"></script>
 
-    <script src="app/router.js"></script>
-    <script src="app/app.js"></script>
-    <script src="app/uploader.js"></script>
-    <script src="app/filelist.js"></script>
+    <script src="/app/router.js"></script>
+    <script src="/app/app.js"></script>
+    <script src="/app/uploader.js"></script>
+    <script src="/app/filelist.js"></script>
 
   </body>
 </html>
