--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       <a href="https://public-api.wordpress.com/oauth2/authorize?response_type=token&client_id=<%- app.config.oAuth.clientID %>&redirect_uri=<%- app.config.oAuth.redirectURL %>" class="authorize">Log In with WordPress Connect</a>
     </script>
 
+    <script type="text/template" id="file-template">
+        <img src="<%= link %>" width="150" height="150" />
+    </script>
+
     <div id='filegrid-title'>Loading your media library...</div>
     <div id='filegrid'></div>
 
@@ -56,12 +60,16 @@
     </script>
 
     <!-- App JS -->
+    <script src="app/config.js"></script>
     <script src="app/views/authorization.js"></script>
+    <script src="app/models/file.js"></script>
+    <script src="app/collections/filelist.js"></script>
+    <script src="app/views/file.js"></script>
+    <script src="app/views/filelist.js"></script>
 
     <script src="app/router.js"></script>
     <script src="app/app.js"></script>
     <script src="app/uploader.js"></script>
-    <script src="app/filelist.js"></script>
 
   </body>
 </html>
