single view: add more info to the template

--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
 
     <script type="text/template" id="single-template">
       <div class="single-image">
-          <img src="<%- link %>" width="500">
+            <img src="<%- link %>" width="500">
+            <p>Image ID: <%- id %></p>
+            <p>Uploaded on: <%- date %></p>
+            <p>Title: <%- title %></p>
+            <p>Caption: <%- caption %></p>
+            <p>Description: <%- description %></p>
       </div>
     </script>
 
