replace the login button with the WPCC logo/button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </script>
 
     <script type="text/template" id="authorize-template">
-      <a href="https://public-api.wordpress.com/oauth2/authorize?response_type=token&client_id=<%- app.config.oAuth.clientID %>&redirect_uri=<%- app.config.oAuth.redirectURL %>" class="authorize">Login with WordPress.com</a>
+      <a href="https://public-api.wordpress.com/oauth2/authorize?response_type=token&client_id=<%- app.config.oAuth.clientID %>&redirect_uri=<%- app.config.oAuth.redirectURL %>" class="authorize"><img src="//s0.wp.com/i/wpcc-button.png" width="231"></a>
     </script>
 
     <script type="text/template" id="single-template">
