--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <p>Title: <%- title %></p>
             <p>Caption: <%- caption %></p>
             <p>Description: <%- description %></p>
+            <ul class="single-image-actions">
+                <li><a href='#' class='single-image-delete'>Delete Image</a></li>
+            </ul>
       </div>
     </script>
 
