--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     </script>
 
     <script type="text/template" id="authorize-template">
-      <a href="https://public-api.wordpress.com/oauth2/authorize?response_type=token&client_id=<%- app.config.oAuth.clientID %>&redirect_uri=<%- app.config.oAuth.redirectURL %>" class="authorize"><img src="//s0.wp.com/i/wpcc-button.png" width="231"></a>
+        <h1>Welcome to Sulfur</h1>
+        <img src="https://i0.wp.com/developer.files.wordpress.com/2014/05/img_4714.jpg?w=400" alt="Sulfur" />
+        <a href="https://public-api.wordpress.com/oauth2/authorize?response_type=token&client_id=<%- app.config.oAuth.clientID %>&redirect_uri=<%- app.config.oAuth.redirectURL %>" class="authorize"><img src="//s0.wp.com/i/wpcc-button.png" width="231"></a>
     </script>
 
     <script type="text/template" id="single-template">
