add a back button on the single image view

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </script>
 
     <script type="text/template" id="single-template">
+      <a href="/">Go back</a>
       <div class="single-image">
             <img src="<%- link %>" width="500">
             <p>Image ID: <%- id %></p>
