add missing dom elements that broke the uploader

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   </head>
   <body id="the-body">
     <div id="main"></div>
+
+    <div id="filelist"></div>
+    <div id="file-container"></div>
     <a id="pickfiles" href="javascript:;">[Select files]</a>
 
     <script type="text/template" id="logout-template">
