display the logout view and make it logout

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <![endif]-->
   </head>
   <body id="the-body">
+
     <div id="main"></div>
 
     <div id="filelist"></div>
@@ -25,7 +26,7 @@
     <a id="pickfiles" href="javascript:;">[Select files]</a>
 
     <script type="text/template" id="logout-template">
-        <a href="/logout" id="logout">Log Out</a>
+        <a href="#logout" id="logout">Log Out</a>
     </script>
 
     <script type="text/template" id="authorize-template">
@@ -64,6 +65,7 @@
     <!-- App JS -->
     <script src="app/config.js"></script>
     <script src="app/views/authorization.js"></script>
+    <script src="app/views/logout.js"></script>
     <script src="app/models/file.js"></script>
     <script src="app/collections/filelist.js"></script>
     <script src="app/views/file.js"></script>
