--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <div id="filelist"></div>
     <div id="file-container"></div>
-    <a id="pickfiles" href="javascript:;">[Select files]</a>
 
+    <!-- Templates JS -->
     <script type="text/template" id="logout-template">
         <a href="#logout" id="logout">Log Out</a>
     </script>
@@ -64,13 +64,16 @@
 
     <!-- App JS -->
     <script src="app/config.js"></script>
-    <script src="app/views/authorization.js"></script>
-    <script src="app/views/logout.js"></script>
+
     <script src="app/models/file.js"></script>
     <script src="app/collections/filelist.js"></script>
+
+    <script src="app/views/authorization.js"></script>
+    <script src="app/views/logout.js"></script>
     <script src="app/views/file.js"></script>
     <script src="app/views/filelist.js"></script>
     <script src="app/views/single.js"></script>
+    <script src="app/views/picker.js"></script>
 
     <script src="app/router.js"></script>
     <script src="app/app.js"></script>
