Move the picker to a template

--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
 
     <div id="main"></div>
 
-    <div id="filelist"></div>
-    <div id="file-container"></div>
-
     <!-- Templates JS -->
     <script type="text/template" id="logout-template">
         <a href="#logout" id="logout">Log Out</a>
@@ -48,6 +45,12 @@
                 <li><a href='#' class='single-image-delete'>Delete Image</a></li>
             </ul>
       </div>
+    </script>
+
+    <script type="text/template" id="picker-template">
+        <a href="" id="pickfiles">[Select Files]</a>
+        <div id="filelist"></div>
+        <div id="file-container"></div>
     </script>
 
     <!-- Library JS -->
