--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <script src="app/views/filelist.js"></script>
     <script src="app/views/single.js"></script>
     <script src="app/views/picker.js"></script>
+    <script src="app/views/spinner.js"></script>
 
     <script src="app/router.js"></script>
     <script src="app/app.js"></script>
