--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
     <div id="main"></div>
 
     <!-- Templates JS -->
-    <script type="text/template" id="logout-template">
+    <script type="text/template" id="header-template">
+        <h1>Sulfur</h1>
+    </script>
+
+    <script type="text/template" id="user-template">
+        <img id="avatar" src="" />
+        <p id="name">Andy Peatling</p>
+        <p id="url">apeatling.wordpress.com</p>
         <a href="#logout" id="logout">Log Out</a>
     </script>
 
@@ -69,10 +76,13 @@
     <script src="app/config.js"></script>
 
     <script src="app/models/file.js"></script>
+    <script src="app/models/user.js"></script>
+
     <script src="app/collections/filelist.js"></script>
 
+    <script src="app/views/userdetails.js"></script>
+    <script src="app/views/header.js"></script>
     <script src="app/views/authorization.js"></script>
-    <script src="app/views/logout.js"></script>
     <script src="app/views/file.js"></script>
     <script src="app/views/filelist.js"></script>
     <script src="app/views/single.js"></script>
