Get the user avatar and name

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
     </script>
 
     <script type="text/template" id="user-template">
-        <img id="avatar" src="" />
-        <p id="name">Andy Peatling</p>
-        <p id="url">apeatling.wordpress.com</p>
+        <img id="avatar" src="<%- avatar_URL %>" width="40" height="40" />
+        <p id="name"><%- display_name %></p>
         <a href="#logout" id="logout">Log Out</a>
     </script>
 
