--- a/index.html
+++ b/index.html
@@ -33,14 +33,38 @@
     </script>
 
     <script type="text/template" id="single-template">
-      <a href="/">Go back</a>
-      <div class="single-image">
+        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+            Launch demo modal
+        </button>
+
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img src="<%- link %>" width="500">
+                        <aside>
+                            <div><h4>Title</h4> <%- title ? title : 'n/a' %></div>
+                            <div><h4>Caption</h4> <%- caption ? caption : 'n/a' %></div>
+                            <div><h4>Description</h4> <%- description ? description : 'n/a' %></div>
+                            <div><h4>Image ID</h4> <%- id %></div>
+                        </aside>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="single-image">
             <img src="<%- link %>" width="500">
             <p>Image ID: <%- id %></p>
             <p>Uploaded on: <%- date %></p>
-            <p>Title: <%- title %></p>
-            <p>Caption: <%- caption %></p>
-            <p>Description: <%- description %></p>
+
             <ul class="single-image-actions">
                 <li><a href='#' class='single-image-delete'>Delete Image</a></li>
             </ul>
