change the select button into a button

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
     </script>
 
     <script type="text/template" id="picker-template">
-        <a href="" id="pickfiles">[Select Files]</a>
-        <div id="file-container"></div>
+        <button id="pickfiles" class="btn btn-primary">Select Files</button>
     </script>
 
     <!-- Load Everything through requirejs -->
