make the image meta not break stuff when the type isn't an image

--- a/index.html
+++ b/index.html
@@ -58,18 +58,25 @@
                             <div class="main-info caption"><h4>Caption</h4> <%- caption ? caption : 'No caption added' %></div>
                             <div class="main-info description"><h4>Description</h4> <%- description ? description : 'No description added' %></div>
                             <div class="main-info image-id"><h4>Image ID</h4> <%- id %></div>
-                            
+
+                            <% if ( metadata.image_meta ) { %>
                             <ul class="nav nav-tabs nav-justified">
                                 <li class="active"><a href="#general" data-toggle="tab"><span class="glyphicon glyphicon-info-sign"></span>General</a></li>
                                 <li><a href="#camera" data-toggle="tab"><span class="glyphicon glyphicon-camera"></span>Camera</a></li>
                             </ul>
+                            <% } %>
 
                             <!-- Tab panes -->
+                            <% if ( metadata.image_meta ) { %>
                             <div class="tab-content">
                                 <div class="tab-pane active" id="general">
-                                    <div class="gen-info size"><h4>Size</h4> <%- metadata.width %> x <%- metadata.height %></div>
+                            <% } %>
+                                    <% if ( metadata.image_meta ) { %>
+                                        <div class="gen-info size"><h4>Size</h4> <%- metadata.width %> x <%- metadata.height %></div>
+                                    <% } %>
                                     <div class="gen-info date"><h4>Uploaded On</h4> <%- date %></div>
                                     <div class="gen-info link"><h4>Link</h4><input type="text" value="<%- link %>" readonly="readonly"/></div>
+                                <% if ( metadata.image_meta ) { %>
                                 </div>
                                 <div class="tab-pane" id="camera">
                                     <div class="cam-info camera"><h4>Camera</h4> <%- metadata.image_meta.camera ? metadata.image_meta.camera : 'n/a' %></div>
@@ -79,6 +86,7 @@
                                     <div class="cam-info focal"><h4>Focal Length</h4> <%- metadata.image_meta.focal_length ? metadata.image_meta.focal_length : 'n/a' %></div>
                                 </div>
                             </div>
+                            <% } %>
 
                         </aside>
                         <div class="clearfix"></div>
