UX: add instructions to drag files

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </script>
 
     <script type="text/template" id="picker-template">
-        <button id="pickfiles" class="btn btn-info btn-lg">Upload Files</button>
+        <button id="pickfiles" class="btn btn-info btn-lg">Drag files here or click to upload</button>
     </script>
 
     <!-- Load Everything through requirejs -->
